[project]
name = "pycask"
version = "1.0.0"
description = "Implementation of Bitcask"
authors = [
    {name = "dxtym",email = "dilmurod.abdusamadov2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
